# as-biblioteca

./: pyproject.toml
src/: abac.py  config.py  exceptions.py  main.py
src/api/: auth.py  books.py  decorators.py  dependencies.py
src/connectors/: redis_connector.py
src/repositories/: base.py  users.py
src/repositories/mappers/: base.py  mappers.py
src/schemas/: books.py  users.py
src/services/: auth.py
src/utils/: db_manager.py
