[project]
name = "as-library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=1.30.0",
    "fastapi>=0.116.1",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "redis>=6.2.0",
    "uvicorn>=0.35.0",
    "pyjwt>=2.10.1",
]
